--- a/src/app/pages/plugintester/plugintester.page.scss
+++ b/src/app/pages/plugintester/plugintester.page.scss
@@ -18,4 +18,13 @@
         }
     }
 
+    .item {
+        width: 100%;
+        padding-right: 10px;
+    }
+
+    .butt-submit {
+        margin-top: 20px;
+    }
+
 }
