--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -82,7 +82,7 @@
    * -------------------------------------------
    */
 
-  body {
+/*  body {
     --ion-color-primary: #428cff;
     --ion-color-primary-rgb: 66,140,255;
     --ion-color-primary-contrast: #ffffff;
@@ -146,13 +146,13 @@
     --ion-color-light-shade: #1e2023;
     --ion-color-light-tint: #383a3e;
   }
-
+*/
   /*
    * iOS Dark Theme
    * -------------------------------------------
    */
 
-  .ios body {
+/*  .ios body {
     --ion-background-color: #000000;
     --ion-background-color-rgb: 0,0,0;
 
@@ -184,12 +184,12 @@
     --ion-item-background: #000000;
   }
 
-
+*/
   /*
    * Material Design Dark Theme
    * -------------------------------------------
    */
-
+/*
   .md body {
     --ion-background-color: #121212;
     --ion-background-color-rgb: 18,18,18;
@@ -229,4 +229,5 @@
   ion-title.title-large {
     --color: white;
   }
+  */
 }
