--- a/src/app/views/login/login.page.html
+++ b/src/app/views/login/login.page.html
@@ -1,6 +1,6 @@
 <ion-content>
 
-	<div class="content-wrapper">
+	<div class="content-wrapper row">
 		<ion-card class="content-prompt" [ngClass]="{ 'loading': state === 'loading'}">
 			<ion-card-header>
 				<ion-card-title>Login to Start</ion-card-title>
