Started meal plan flow

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -28,12 +28,12 @@
   --ion-color-tertiary-tint: #ffe073;
 
   /** success **/
-  --ion-color-secondary: #1DE2B2;
-  --ion-color-secondary-rgb: 29,226,178;
-  --ion-color-secondary-contrast: #ffffff;
-  --ion-color-secondary-contrast-rgb: 255, 255, 255;
-  --ion-color-secondary-shade: #1ac79d;
-  --ion-color-secondary-tint: #34e5ba;
+  --ion-color-success: #1DE2B2;
+  --ion-color-success-rgb: 29,226,178;
+  --ion-color-success-contrast: #ffffff;
+  --ion-color-success-contrast-rgb: 255, 255, 255;
+  --ion-color-success-shade: #1ac79d;
+  --ion-color-success-tint: #34e5ba;
 
   /** warning **/
   --ion-color-warning: #ffc409;
