--- a/src/global.scss
+++ b/src/global.scss
@@ -116,3 +116,55 @@ ion-slide {
         max-width: 400px;
     }
 }
+
+.vertical-center {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+}
+
+@font-face {
+    font-family: 'robotomedium';
+    src: url('assets/font/roboto-medium-webfont.woff2') format('woff2'),
+         url('assets/font/roboto-medium-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+
+
+
+@font-face {
+    font-family: 'robotoregular';
+    src: url('assets/font/roboto-regular-webfont.woff2') format('woff2'),
+         url('assets/font/roboto-regular-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+
+
+
+@font-face {
+    font-family: 'rubikbold';
+    src: url('assets/font/rubik-bold-webfont.woff2') format('woff2'),
+         url('assets/font/rubik-bold-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+
+
+
+@font-face {
+    font-family: 'work_sansregular';
+    src: url('assets/font/worksans-variablefont_wght-webfont.woff2') format('woff2'),
+         url('assets/font/worksans-variablefont_wght-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
