update splash screen UI

--- a/src/app/views/splash/splash.page.html
+++ b/src/app/views/splash/splash.page.html
@@ -1,9 +1,9 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>splash</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content>
-
+  <div class="vertical-center">
+    <div class="center">
+      <ion-img [src]="imgSrc" class="splash-image ion-align-self-end">  
+      </ion-img>
+      <ion-label>Chef</ion-label>
+    </div>
+  </div>
 </ion-content>
