--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -74,6 +74,20 @@
   --ion-color-light-contrast-rgb: 0, 0, 0;
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
+
+  /** font main **/
+  --ion-color-font-main: #000000;
+  --ion-color-font-main-rgb: 0,0,0;
+  --ion-color-font-main-contrast: #ffffff;
+  --ion-color-font-main-contrast-rgb: 255,255,255;
+  --ion-color-font-main-shade: #000000;
+  --ion-color-font-main-tint: #1a1a1a;
+
+  /** logo font **/
+  --font-family-logo: rubikbold;
+  --font-style-logo: normal;
+  --font-weight-logo: bold;
+
 }
 
 @media (prefers-color-scheme: dark) {
