--- a/src/global.scss
+++ b/src/global.scss
@@ -111,12 +111,6 @@
     }
 }
 
-ion-slide {
-    ion-card {
-        max-width: 400px;
-    }
-}
-
 .vertical-center {
     display: flex;
     align-items: center;
@@ -124,6 +118,64 @@ ion-slide {
     height: 100%;
 }
 
+ion-slide {
+    ion-card {
+        max-width: 400px;
+    }
+}
+
+ion-card {
+    border-radius: 0px;
+}
+
+ion-card-title {
+    color: var(--ion-color-font-main);
+    font-family: var(--font-family-heading);
+    font-style: var(--font-style-heading);
+    font-weight: var(--font-weight-heading);
+    font-size: 36px;
+    line-height: 45px;
+}
+
+.form-input{
+    background: #FEFEFE;
+    border: 1px solid #E3E3E3;
+    box-sizing: border-box;
+    margin: 12px auto;
+
+    --padding-start: 10px;
+
+    font-family: var(--font-family-body);
+    font-style: var(--font-style-body);
+    font-weight: var(--font-weight-body);
+    font-size: 18px;
+    line-height: 23px;
+}
+
+.submit-button {
+    width: 100%;
+    --border-radius: 50px;
+    --box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+
+    color: var(--ion-color-font-button);
+    font-family: var(--font-family-button);
+    font-style: var(--font-style-button);
+    font-weight: var(--font-weight-button);
+    font-size: 16px;
+    line-height: 19px;
+    text-align: center;
+    letter-spacing: 0.1em;
+    text-transform: uppercase;
+    height: 50px;
+    margin: 8px auto;
+}
+
+.content-wrapper {
+    background-size: auto 100%;
+}
+
+
+/** Font **/
 @font-face {
     font-family: 'robotomedium';
     src: url('assets/font/roboto-medium-webfont.woff2') format('woff2'),
