--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -91,6 +91,22 @@
   --ion-color-font-button-shade: #e0e0e0;
   --ion-color-font-button-tint: #ffffff;
 
+  /** input background **/
+  --ion-color-input-background: #FEFEFE;
+  --ion-color-input-background-rgb: 254,254,254;
+  --ion-color-input-background-contrast: #000000;
+  --ion-color-input-background-contrast-rgb: 0,0,0;
+  --ion-color-input-background-shade: #e0e0e0;
+  --ion-color-input-background-tint: #fefefe;
+
+  /** input border **/
+  --ion-color-input-border: #E3E3E3;
+  --ion-color-input-border-rgb: 227,227,227;
+  --ion-color-input-border-contrast: #000000;
+  --ion-color-input-border-contrast-rgb: 0,0,0;
+  --ion-color-input-border-shade: #c8c8c8;
+  --ion-color-input-border-tint: #e6e6e6;
+  
   /** logo font **/
   --font-family-logo: rubikbold;
   --font-style-logo: normal;
@@ -110,6 +126,11 @@
   --font-family-button: rubikbold;
   --font-style-button: normal;
   --font-weight-button: bold;
+
+  /** back button font **/
+  --font-family-back: robotomedium;
+  --font-style-back: normal;
+  --font-weight-back: bold;
 }
 
 @media (prefers-color-scheme: dark) {
