--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -126,7 +126,11 @@
   --font-family-button: rubikbold;
   --font-style-button: normal;
   --font-weight-button: bold;
-
+  
+  /** back button font **/
+  --font-family-back: robotomedium;
+  --font-style-back: normal;
+  --font-weight-back: bold;
   
 }
 
