refactor background image

--- a/src/app/views/login/login.page.scss
+++ b/src/app/views/login/login.page.scss
@@ -1,5 +1,5 @@
-.content-wrapper {
-    background-image: url(../../../assets/images/background-login.svg);
+ion-content {
+    --background: url(../../../assets/images/background-login.svg);
 }
 
 ion-card-title {
