--- a/src/global.scss
+++ b/src/global.scss
@@ -71,6 +71,8 @@
                 font-weight: var(--font-weight-body);
                 font-size: 18px;
                 line-height: 23px;  
+                padding-top: 11px;
+                padding-bottom: 12px;
             }
         }
 
