--- a/src/app/views/login/login.page.scss
+++ b/src/app/views/login/login.page.scss
@@ -1,5 +1,5 @@
 ion-content {
-    --background: url(../../../assets/images/background-login.svg);
+    --background: url(../../../assets/images/background-login.svg) -24px 42px;
 }
 
 ion-card-title {
