--- a/src/global.scss
+++ b/src/global.scss
@@ -53,7 +53,8 @@
     
     ion-card {
         border-radius: 0px;
-
+        opacity: 0.9;
+        
         ion-card-header {
             padding: 26px 40px 0;
         }
