Added meal slots

--- a/src/app/core/components/mealslot/mealslot.component.html
+++ b/src/app/core/components/mealslot/mealslot.component.html
@@ -1,3 +1,4 @@
-<p>
-  mealslot works!
-</p>
+<div class="meal">
+	<span *ngIf="!mealSlot.selected">{{ mealSlot.id }}</span>
+	<img *ngIf="mealSlot.selected" src="{{ mealSlot.image }}" />
+</div>
