--- a/src/app/views/onboarding/pages/onboarding-preferences/onboarding-preferences.component.html
+++ b/src/app/views/onboarding/pages/onboarding-preferences/onboarding-preferences.component.html
@@ -10,7 +10,8 @@
     <div class="content-wrapper column start">
 
         <div class="progress">
-            <ion-progress-bar color="tertiary" value="0.5"></ion-progress-bar>
+            <ion-progress-bar indeterminate color="tertiary" value="0.5"></ion-progress-bar>
+            <p class="progress-percentage">% Complete</p>
         </div>
 
         <div class="content">
