update background img

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -75,6 +75,14 @@
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
 
+  /** background **/
+  --ion-color-background: #FDFDFD;
+  --ion-color-background-rgb: 253,253,253;
+  --ion-color-background-contrast: #000000;
+  --ion-color-background-contrast-rgb: 0,0,0;
+  --ion-color-background-shade: #dfdfdf;
+  --ion-color-background-tint: #fdfdfd;
+
   /** font main **/
   --ion-color-font-main: #000000;
   --ion-color-font-main-rgb: 0,0,0;
