--- a/src/app/views/onboarding/pages/onboarding-getstarted/onboarding-getstarted.page.scss
+++ b/src/app/views/onboarding/pages/onboarding-getstarted/onboarding-getstarted.page.scss
@@ -1,3 +1,3 @@
 ion-content {
-    --background: url(../../../../../assets/images/background-onboarding-intro.svg);
+    --background: url(../../../../../assets/images/background-onboarding-intro.svg) -34px 0px;
 }
