--- a/src/global.scss
+++ b/src/global.scss
@@ -26,6 +26,10 @@
 @import "~@ionic/angular/css/flex-utils.css";
 
 :root {
+    ion-content {
+        background-color: var(--ion-color-background);
+    }
+
     ion-input {
         background: var(--ion-color-input-background);
         border: 1px solid var(--ion-color-input-border) ;
