--- a/src/app/views/onboarding/pages/onboarding-preferences/onboarding-preferences.component.scss
+++ b/src/app/views/onboarding/pages/onboarding-preferences/onboarding-preferences.component.scss
@@ -1,3 +1,3 @@
 ion-content {
-    --background: url(../../../../../assets/images/background-preferences.svg);
+    --background: url(../../../../../assets/images/background-preferences.svg) 0 -10px;
 }
