update progress bar style

--- a/src/global.scss
+++ b/src/global.scss
@@ -150,8 +150,7 @@
 
     .progress {
         width: 80%;
-        padding: 40px 0;
-        position: absolute;
+        padding-top: 40px;
     }
 
     .progress-percentage {
