--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -123,6 +123,14 @@
   --ion-color-disabled-shade: #c8c8c8;
   --ion-color-disabled-tint: #e6e6e6;
 
+  /** pager **/
+  --ion-color-pager: #989898;
+  --ion-color-pager-rgb: 152,152,152;
+  --ion-color-pager-contrast: #000000;
+  --ion-color-pager-contrast-rgb: 0,0,0;
+  --ion-color-pager-shade: #868686;
+  --ion-color-pager-tint: #a2a2a2;
+
   /** logo font **/
   --font-family-logo: rubikbold;
   --font-style-logo: normal;
@@ -133,10 +141,20 @@
   --font-style-heading: normal;
   --font-weight-heading: normal;
 
+  /** subheading button font **/
+  --font-family-subheading: robotoregular;
+  --font-style-subheading: medium;
+  --font-weight-subheading: bold;
+
   /** body font **/
   --font-family-body: robotoregular;
   --font-style-body: normal;
   --font-weight-body: normal;
+
+  /** question button font **/
+  --font-family-question-button: robotoregular;
+  --font-style-question-button: normal;
+  --font-weight-question-button: bold;
 
   /** button font **/
   --font-family-button: rubikbold;
@@ -147,7 +165,6 @@
   --font-family-back: robotomedium;
   --font-style-back: normal;
   --font-weight-back: bold;
-  
 }
 
 @media (prefers-color-scheme: dark) {
