--- a/src/global.scss
+++ b/src/global.scss
@@ -127,6 +127,93 @@
         line-height: 16px;
         text-transform: uppercase;
     }
+
+    .slide-options {
+        ion-card {
+            border-radius: 8px;
+            border: 1px solid var(--ion-color-input-border);
+            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
+            margin-top: 13px;
+            margin-bottom: 13px;
+        }
+    
+        ion-card-header {
+            padding: 0 20px;
+    
+            ion-card-title {
+                color: var(--ion-color-font-main);
+                font-family: var(--font-family-body);
+                font-style: var(--font-style-body);
+                font-weight: var(--font-weight-body);
+                font-size: 24px;
+                line-height: 28px;
+                text-align: left;
+            }
+        }
+
+        ion-card-content {
+            padding: 0 20px;
+            p {
+                text-align: left;
+
+                color: var(--ion-color-font-main);
+                font-family: var(--font-family-body);
+                font-style: var(--font-style-body);
+                font-weight: var(--font-weight-body);
+                font-size: 14px;
+                line-height: 20px;
+            }
+
+            .sub-heading{
+                color: var(--ion-color-font-main);
+                font-family: var(--font-family-subheading);
+                font-style: var(--font-style-subheading);
+                font-weight: var(--font-weight-subheading);
+                font-size: 14px;
+                line-height: 20px;
+                padding-top: 6px;
+            }
+
+            .transparent-butt {
+                --background: transparent;
+                color: var(--ion-color-primary);
+                text-transform: uppercase;
+                font-size: 14px;
+                line-height: 17px;
+                font-family: var(--font-family-button);
+                font-style: var(--font-style-button);
+                font-weight: var(--font-weight-button);
+
+                &:active, &:hover, &:focus {
+                    --background: var(--ion-color-background);
+                    --background-activated: var(--ion-color-background);
+                    --background-focused: var(--ion-color-background);
+                    --background-hovered: var(--ion-color-background);
+                }
+            }
+
+            ion-button {
+                margin: 4.5px 0;
+                min-height: 37px;
+
+                span {
+                    font-family: var(--font-family-question-button);
+                    font-style: var(--font-style-question-button);
+                    font-weight: var(--font-weight-question-button);
+                    font-size: 14px;
+                    line-height: 18px;
+                    text-transform: none;
+                    white-space: normal;
+                    padding: 2px;
+                    letter-spacing: 0;
+                }
+
+                &selected {
+                    background-color: var(--ion-color-secondary);
+                }
+            }
+        }
+    }
 }
 
 .content-wrapper {
@@ -149,8 +236,8 @@
     }
 
     .progress {
-        width: 80%;
-        padding-top: 40px;
+        width: 100%;
+        padding: 45px 16px 0;
     }
 
     .progress-percentage {
@@ -238,6 +325,35 @@ p {
     font-weight: var(--font-weight-body);
     font-size: 18px;
     line-height: 23px;
+}
+
+.icon-ingredient {
+    width: 25px;
+    height: 26px;
+    margin-right: 10px;
+}
+
+.content-row{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 13px 0 11px;
+}
+
+.pager {
+    font-size: 12px;
+    line-height: 16px;
+    color: var(--ion-color-pager);
+    font-family: var(--font-family-body);
+    font-style: var(--font-style-body);
+    font-weight: var(--font-weight-body);
+
+    width: 100%;
+    text-align: center;
+}
+
+.hidden {
+    opacity: 0;
 }
 
 
