--- a/src/app/core/components/mealslot/mealslot.component.scss
+++ b/src/app/core/components/mealslot/mealslot.component.scss
@@ -4,12 +4,14 @@
     border: 1px solid var(--ion-color-disabled);
     border-radius: 8px;
     display: inline-block;
-    margin: 6px;
+    margin: 0 6px;
     text-align: center;
     line-height: 72px;
     color: var(--ion-color-disabled);
     font-size: 2.25em;
     overflow: hidden;
+    font-family: var(--font-family-heading);
+    box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.25);
 
     &.active {
         font-weight: bold;
