--- a/src/app/views/mealselection/pages/mealselection-selectmeal/mealselection-selectmeal.component.scss
+++ b/src/app/views/mealselection/pages/mealselection-selectmeal/mealselection-selectmeal.component.scss
@@ -1,8 +1,21 @@
 .swiper-slide {
+
+    .selected-border {
+        display: none;
+    }
+
     &.selected {
 
-        ion-card {
-            border: 3px solid var(--ion-color-secondary);
+        .selected-border {
+            display: block;
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            top: 0;
+            left: 0;
+            pointer-events: none;
+            border: 3px solid var(--ion-color-primary);
+            border-radius: 8px;
         }
 
     }
@@ -17,16 +30,114 @@
 
 }
 
+.meal-info {
+    padding: 0 20px;
+}
+
 ion-slides {
-    padding-bottom: 20px;
+    padding-bottom: 40px;
 
     .swiper-pagination {
         bottom: 0;
     }
+
+    ion-card {
+        border-radius: 8px;
+        text-align: left;
+
+        .image-wrap {
+            height: 225px;
+
+            img {
+                object-fit: cover;
+                width: 100%;
+                height: 100%;
+            }
+        }
+
+        ion-card-header {
+            padding: 0 20px;
+
+            ion-card-title {
+                font-size: 24px;
+                font-family: var(--font-family-body);
+            }
+
+        }
+
+        ion-card-content {
+            padding-left: 20px;
+            padding-right: 20px;
+            text-align: center;
+
+            p {
+                padding-top: 0;
+                text-align: left;
+            }
+
+            ion-button {
+                width: 180px;
+            }
+
+            .meal-details {
+                margin-bottom: 20px;
+                text-align: left;
+
+                .detail {
+                    display: inline-block;
+                    height: 23px;
+                    margin-right: 15px;
+
+                    .icon {
+                        width: 23px;
+                        height: 23px;
+                        display: inline-block;
+                        vertical-align: middle;
+                        margin-right: 5px;
+
+                        &.ingredients {
+                            background: url(../../../../../assets/images/icon-ingredients.svg) center center no-repeat;
+                            background-size: 90%;
+                        }
+
+                        &.cooktime {
+                            background: url(../../../../../assets/images/icon-cooktime.svg) center center no-repeat;
+                            background-size: contain;
+                        }
+
+
+                    }
+
+                    .text {
+                        vertical-align: bottom;
+                        color: var(--ion-color-font-main);
+                        font-family: var(--font-family-body);
+                    }
+
+                }
+
+            }
+        }
+
+
+    }
+}
+
+.butt-continue {
+    width: 240px;
+    margin-bottom: 30px;
 }
 
 .meal-slots {
     width: 100%;
-    overflow-x: scroll;
-    white-space: nowrap;
+    min-height: 120px;
+    padding: 20px;
+    //overflow-x: scroll;
+    //white-space: nowrap;
+}
+
+.button-disabled {
+    &.ion-color-primary {
+        --ion-color-base: var(--ion-color-disabled, #3880ff)!important;
+    }
 }
