--- a/src/app/core/components/recipemodal/recipemodal.component.scss
+++ b/src/app/core/components/recipemodal/recipemodal.component.scss
@@ -1,3 +1,16 @@
+.image-wrap {
+    margin: 20px;
+    border-radius: 8px;
+    overflow: hidden;
+    height: 225px;
+
+    img {
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
+    }
+}
+
 .butt-close {
     position: absolute;
     top: 20px;
