update progress value

--- a/src/app/views/onboarding/pages/onboarding-mealpreferences/onboarding-mealpreferences.component.html
+++ b/src/app/views/onboarding/pages/onboarding-mealpreferences/onboarding-mealpreferences.component.html
@@ -10,7 +10,7 @@
 	<div class="content-wrapper column start">
 		<div class="progress">
             <ion-progress-bar indeterminate color="tertiary" value="{{progressValue}}"></ion-progress-bar>
-			<p class="progress-percentage"> {{progressValue}}% Complete</p>
+			<p class="progress-percentage"> {{progressValue * 100}}% Complete</p>
 		</div>
 		<h1 class="content-prompt">Meal Preferences</h1>
 		<div class="slide-options">
