update progress value format

--- a/src/app/views/onboarding/pages/onboarding-preferences/onboarding-preferences.component.html
+++ b/src/app/views/onboarding/pages/onboarding-preferences/onboarding-preferences.component.html
@@ -11,7 +11,7 @@
 
         <div class="progress">
             <ion-progress-bar indeterminate color="tertiary" value="{{progressValue}}"></ion-progress-bar>
-            <p class="progress-percentage"> {{progressValue}}% Complete</p>
+            <p class="progress-percentage"> {{progressValue * 100}}% Complete</p>
         </div>
 
         <div class="content">
