add flex style for content

--- a/src/global.scss
+++ b/src/global.scss
@@ -151,6 +151,18 @@
         display: flex;
         justify-content: center;
         align-items: center;
+
+        &.row {
+            flex-direction: row;
+        }
+    
+        &.column {
+            flex-direction: column;
+        }
+    
+        &.start {
+            justify-content: flex-start;
+        }
     }
 
     .slide-options {
