--- a/src/global.scss
+++ b/src/global.scss
@@ -256,6 +256,12 @@ h1 {
     border: none;
 }
 
+.complete-image {
+    padding-bottom: 65px;
+    width: 33%;
+    height: 33%;
+}
+
 /** Font **/
 @font-face {
     font-family: 'robotomedium';
