update onboarding complete page UI

--- a/src/app/views/onboarding/pages/onboarding-complete/onboarding-complete.component.html
+++ b/src/app/views/onboarding/pages/onboarding-complete/onboarding-complete.component.html
@@ -5,15 +5,16 @@
       </ion-buttons>
   </ion-toolbar>
 </ion-header>
-<ion-content>
+<ion-content fullscreen>
 
   <div class="content-wrapper column start">
 
       <div class="progress">
-          <ion-progress-bar color="tertiary" value="0.5"></ion-progress-bar>
+        <ion-progress-bar indeterminate color="tertiary" value="1"></ion-progress-bar>
+        <p class="progress-percentage">On Boarding is Complete!</p>
       </div>
 
-      <div class="content column">
+      <div class="content column start content-prompt">
           <ion-img [src]="imgSrc" class="complete-image ion-align-self-center"></ion-img>
           <h1>Please Wait</h1>
           <p>We are creating a personalised meal plan for you now!</p>
